almost fixed nav

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -16,7 +16,7 @@
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-
+            <div class="collapse navbar-collapse" [ngClass]="{'collapse navbar-collapse':showRoutes===true}" *ngIf="router.url!='/csgo' && router.url!='/csgo/results' && router.url!='/csgo/ranking' && router.url!='/csgo/upcoming'" id="navbarNavAltMarkup">
                 <ng-template [ngIf]="router.url === '/'">
                     <a class="nav-item nav-link"routerLink="csgo">
                         <img src="../../assets/CSGO_logo.png" width="40px" height="40px">
@@ -64,8 +64,8 @@
                     <a class="nav-item nav-link" routerLink="csgo/ranking">World Ranking</a>
                     <a class="nav-item nav-link" routerLink="csgo/upcoming">Upcoming</a>
                 </ng-template>
-
-                <ng-template [ngIf]="showRoutes">
+            </div>
+                <ng-template [ngIf]="showRoutes && router.url!='/'">
                     <a class="navbar-brand" routerLink="">
                             <img class="logo" src="../../assets/logo.png">
                         </a>
