--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,5 +1,49 @@
-<footer id="footer">
-  <div>
-    Coming Soon TM
-  </div>
-</footer>
+<section id="footer">
+		<div class="container">
+			<div class="row text-center text-xs-center text-sm-left text-md-left">
+				<div class="col-xs-12 col-sm-4 col-md-4">
+					<h5>Counter-Strike</h5>
+					<ul class="list-unstyled quick-links">
+						<li><a href="/csgo"><i class="fa fa-angle-double-right"></i>Home</a></li>
+						<li><a href="/csgo/results"><i class="fa fa-angle-double-right"></i>Results</a></li>
+						<li><a href="/csgo/ranking"><i class="fa fa-angle-double-right"></i>World Ranking</a></li>
+						<li><a href="/csgo/upcoming"><i class="fa fa-angle-double-right"></i>Upcoming/Live</a></li>
+					</ul>
+				</div>
+				<div class="col-xs-12 col-sm-4 col-md-4">
+					<h5>Dota 2</h5>
+					<ul class="list-unstyled quick-links">
+              <li><a href="/dota"><i class="fa fa-angle-double-right"></i>Home</a></li>
+              <li><a href=""><i class="fa fa-angle-double-right"></i>Results</a></li>
+              <li><a href=""><i class="fa fa-angle-double-right"></i>World Ranking</a></li>
+              <li><a href=""><i class="fa fa-angle-double-right"></i>Upcoming/Live</a></li>
+					</ul>
+				</div>
+				<div class="col-xs-12 col-sm-4 col-md-4">
+					<h5>League of Legends</h5>
+					<ul class="list-unstyled quick-links">
+              <li><a href="/lol"><i class="fa fa-angle-double-right"></i>Home</a></li>
+              <li><a href=""><i class="fa fa-angle-double-right"></i>Results</a></li>
+              <li><a href=""><i class="fa fa-angle-double-right"></i>World Ranking</a></li>
+              <li><a href=""><i class="fa fa-angle-double-right"></i>Upcoming/Live</a></li>
+					</ul>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-xs-12 col-sm-12 col-md-12 mt-2 mt-sm-5">
+					<ul class="list-unstyled list-inline social text-center">
+            <li class="list-inline-item"><a href="#" target="_blank"><i class="fa fa-envelope"></i></a> madsj123@gmail.com</li>
+            <li class="list-inline-item"><a href="#" target="_blank"><i class="fa fa-envelope"></i></a> dovydastt@gmail.com</li>
+					</ul>
+				</div>
+			
+			</div>	
+			<div class="row">
+				<div class="col-xs-12 col-sm-12 col-md-12 mt-2 mt-sm-2 text-center text-white">
+					<p>Web development bachelor's project - Mads Jacobsen, Dovydas Tamulis</p>
+					<p class="h6"> &copy; All right Reversed.<a class="text-green ml-2" href="https://www.sunlimetech.com" target="_blank">Eesports</a></p>
+				</div>
+			
+			</div>	
+		</div>
+	</section>
