--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -35,7 +35,7 @@
                 </a>
                 <a class="nav-item nav-link" routerLink="csgo/results">Results</a>
                 <a class="nav-item nav-link" routerLink="csgo/ranking">World Ranking</a>
-                <a class="nav-item nav-link" routerLink="csgo/upcoming">Upcoming</a>
+                <a class="nav-item nav-link" routerLink="csgo/upcoming">Upcoming/Live</a>
             </ng-template>
 
             <ng-template [ngIf]="router.url === '/csgo/results'">
@@ -44,7 +44,7 @@
                 </a>
                 <a class="nav-item nav-link" routerLink="csgo/results">Results</a>
                 <a class="nav-item nav-link" routerLink="csgo/ranking">World Ranking</a>
-                <a class="nav-item nav-link" routerLink="csgo/upcoming">Upcoming</a>
+                <a class="nav-item nav-link" routerLink="csgo/upcoming">Upcoming/Live</a>
             </ng-template>
 
             <ng-template [ngIf]="router.url === '/csgo/ranking'">
@@ -53,7 +53,7 @@
                     </a>
                 <a class="nav-item nav-link" routerLink="csgo/results">Results</a>
                 <a class="nav-item nav-link" routerLink="csgo/ranking">World Ranking</a>
-                <a class="nav-item nav-link" routerLink="csgo/upcoming">Upcoming</a>
+                <a class="nav-item nav-link" routerLink="csgo/upcoming">Upcoming/Live</a>
             </ng-template>
 
             <ng-template [ngIf]="router.url === '/csgo/upcoming'">
@@ -62,7 +62,7 @@
                     </a>
                 <a class="nav-item nav-link" routerLink="csgo/results">Results</a>
                 <a class="nav-item nav-link" routerLink="csgo/ranking">World Ranking</a>
-                <a class="nav-item nav-link" routerLink="csgo/upcoming">Upcoming</a>
+                <a class="nav-item nav-link" routerLink="csgo/upcoming">Upcoming/Live</a>
             </ng-template>
             </ng-container>
                 <ng-template [ngIf]="showRoutes && router.url!='/'">
@@ -71,7 +71,7 @@
                         </a>
                     <a class="nav-item nav-link" routerLink="csgo/results">Results</a>
                     <a class="nav-item nav-link" routerLink="csgo/ranking">World Ranking</a>
-                    <a class="nav-item nav-link" routerLink="csgo/upcoming">Upcoming</a>
+                    <a class="nav-item nav-link" routerLink="csgo/upcoming">Upcoming/Live</a>
                 </ng-template> 
 
             <ul class="navbar-nav ml-auto">
