--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
 <app-header></app-header>
-<main [@fadeAnimation]="o.isActivated ? o.activatedRoute : ''">
-  <router-outlet #o="outlet"></router-outlet>
+<main style="position: relative" [@fadeAnimation]="o.isActivated ? o.activatedRoute : ''">
+  <div style="position: relative;">
+    <router-outlet #o="outlet"></router-outlet>
+  </div>
 </main>
