--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 @import '~font-awesome/css/font-awesome.css';
 router-outlet ~ * {
-    position: absolute;
+    position: relative;
     height: 100%;
     width: 100%;
   }
@@ -141,3 +141,6 @@ background-color:#343a40;
 
 }
 
+.fa-li{
+  position: relative;
+}
